--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>Ryan Cross</title>
+  <meta charset="utf-8">
+  <title>Ryan Cross</title>
 </head>
 
 <body>
-    <h1>Home</h1>
-    <p>Hello, welcome to my <strong>freakin</strong> sweet website. View the source code on
-        <a href='https://github.com/RyanCross/ryancross.github.io' title='ryancross.github.io'
-            target='_blank'>GitHub</a>
-    </p>
+  <h1>Home</h1>
+  <p>Hello, welcome to my <strong>freakin</strong> sweet website. View the source code on
+    <a href='https://github.com/RyanCross/ryancross.github.io' title='ryancross.github.io' target='_blank'>GitHub</a>
+  </p>
 </body>
 
 </html>
