Moving web content away from html to module, turns out modules need a local server like node to run

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Ryan Cross</title>
 </head>
 
+<script src="src/main.js" type="module"></script>
+
 <body>
   <h2>Projects</h2>
   <h2>Contact</h2>
@@ -14,33 +16,6 @@
   <h1>Ryan Cross</h1>
   <h3>Software Engineer x Game Developer</h3>
 
-  <p>
-    Welcome. I'm Ryan and I'm a senior software engineer by day. I've spent the last few years in the HealthCare IT
-    space @ Cerner; Building robust APIs and web applications for a range of healthcare concepts. Recently, I've been
-    fortunate enough to work with a team of extremely talented engineers. Creating services that will help health
-    organizations everywhere share important patient information quicker and with better confidence and trust.
-  </p>
-
-  <p>
-    By night, my productive efforts shift towards my long-term dream of building games. Usually working in C# and the
-    Unity engine on fun prototypes or game mechanics I'm trying to reverse engineer. You'll also frequently find me
-    hacking away on absurd ideas at the nearest available Game Jam. Creating that tower defense dating sim you never
-    knew you wanted.
-  </p>
-
-  <p>
-    Sometimes I visit the outside world for huu-man interaction. Sometimes in the form of hiking and skiing when the
-    weather permits; but more often you'll find me at the local board game bar, an up-and-coming venue trend I am
-    eternally grateful for.
-  </p>
-
-  <p>
-    If your interested in learning more in my industry work, head on over to my resume. For my passion projects (hint,
-    it's mostly games), check out the projects page.
-  </p>
-
-  <p>Contents of this site are © Copyright 2019-2020 Ryan Cross. All rights reserved. <a href='https://github.com/RyanCross/ryancross.github.io' title='ryancross.github.io' target='_blank'>Source </a> code is available under the
-    MIT license.</p>
 </body>
 
 </html>
