modules cannot be imported on a lfs due to same origin, prep to serve the static site via just one js file for now for dom manipulation practice

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Ryan Cross</title>
 </head>
 
-<script src="src/main.js" type="module"></script>
+<script src="src/main.js"></script>
 
 <body>
   <h2>Projects</h2>
