dom manip practice, replacing index.html body with one rendered through js, complete with WH2 memes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Ryan Cross</title>
 </head>
 
-<script src="src/main.js"></script>
 
 <body>
   <h2>Projects</h2>
@@ -18,4 +17,6 @@
 
 </body>
 
+
+<script src="src/main.js"></script> <!-- placed after body so that document.body is loaded first, then script is called.-->
 </html>
