adding lorem ipsum in main content, removing the memes, external styelsheet

--- a/index.html
+++ b/index.html
@@ -4,16 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Ryan Cross</title>
+  <link rel="stylesheet" type="text/css" href="src/style/style.css">
 </head>
 
 
 <body>
-  <h2>Projects</h2>
-  <h2>Contact</h2>
-  <h2>Resume</h2>
-  <h2>Jams</h2>
-  <h1>Ryan Cross</h1>
-  <h3>Software Engineer x Game Developer</h3>
 
 </body>
 
